[workspace]
members = [
    "mint_parser"
]
resolver = "2"

[workspace.dependencies]
# Core Solana dependencies
solana-client = "1.18.25"
solana-program = "1.18.25"
solana-account-decoder = "1.18.25"
solana-sdk = "1.18.25"

# Anchor dependencies
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
anchor-gen = "=0.3.1"
borsh = "=0.10"
bytemuck = "1.23.0"

# SPL Token
spl-token = "4.0.0"
spl-memo = "4.0.0"

# Common utilities
anyhow = "1.0.75"
log = "0.4.17"

# Pyth
pyth-sdk-solana = "0.10.0"

# Async runtime
tokio = { version = "1.36.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11.24", features = ["json"] }

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
bincode = "2.0.1"

# CLI
clap = { version = "4.5.1", features = ["derive"] }

# Other utilities
lazy_static = "1.5.0"
num-derive = "0.4"
base64 = "0.13.0"

# Jupiter AMM interface and related dependencies
jupiter-amm-interface = { git = "https://github.com/jup-ag/jupiter-amm-interface.git", rev = "abfb1abbdf574c5406193a67fae1d34e9d706f46" }
rust_decimal = "1.26.1"
spl-token-2022 = { version = "1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }

# Math library dependencies
num-traits = "0.2"
thiserror = "1.0"
typenum = "1.17.0"
fixed = "1.27.0"
