[package]
name = "mint_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client.workspace = true
solana-program.workspace = true
solana-account-decoder.workspace = true
solana-sdk.workspace = true
anchor-client.workspace = true
anchor-lang.workspace = true
spl-token.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
bincode.workspace = true
lazy_static.workspace = true
bytemuck.workspace = true
stabble-stable-swap = { path = "../third_party/amm-sdk/programs/stable-swap", features = ["jupiter-amm"] }
stabble-weighted-swap = { path = "../third_party/amm-sdk/programs/weighted-swap", features = ["jupiter-amm"] }
# raydium_amm = { path = "../third_party/raydium-amm/program" }
# raydium-amm-v3 = { path = "../third_party/raydium-clmm/programs/amm" }
borsh.workspace = true
